--- a/.github/workflows/_e2e.yml
+++ b/.github/workflows/_e2e.yml
@@ -72,12 +72,12 @@ jobs:
         run: pnpm dlx concurrently --kill-others --success command-1 "$E2E_RUN_LOCAL_NET_CMD" 'pnpm --filter @iota/graphql-transport test:e2e'
 
       - name: Build explorer
-        if: ${{ inputs.isTypescriptSDK || inputs.isExplorer || inputs.isRust}}
+        if: inputs.isTypescriptSDK || inputs.isExplorer || inputs.isRust
         run: pnpm turbo --filter=iota-explorer build
 
       - name: Run Explorer e2e tests
         # need to run Explorer e2e when its upstream(TS SDK and Rust) or itself is changed
-        if: ${{ inputs.isTypescriptSDK || inputs.isExplorer || inputs.isRust}}
+        if: inputs.isTypescriptSDK || inputs.isExplorer || inputs.isRust
         run: pnpm --filter iota-explorer playwright test
       - uses: actions/upload-artifact@v3
         if: always()
