--- a/.github/workflows/_turborepo.yml
+++ b/.github/workflows/_turborepo.yml
@@ -64,10 +64,10 @@ jobs:
         continue-on-error: true
         run: pnpm dlx turbo-ignore iota-wallet
       - name: Wallet Extension Preview Package
-        if: ${{ steps.wallet-diff.outcome == 'failure' }}
+        if: steps.wallet-diff.outcome == 'failure'
         run: pnpm --filter iota-wallet pack:zip
       - uses: actions/upload-artifact@v3
-        if: ${{ steps.wallet-diff.outcome == 'failure' }}
+        if: steps.wallet-diff.outcome == 'failure'
         with:
           name: wallet-extension
           path: apps/wallet/web-ext-artifacts/*
