--- a/.github/workflows/links_checker.yml
+++ b/.github/workflows/links_checker.yml
@@ -51,7 +51,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create issue from report file
-        if: ${{ steps.last_issue.outputs.has_found == 'false' }}
+        if: steps.last_issue.outputs.has_found == 'false'
         uses: peter-evans/create-issue-from-file@v4
         with:
           title: Link checker report
@@ -62,7 +62,7 @@ jobs:
             automated issue
 
       - name: Update last report open issue created
-        if: ${{ steps.last_issue.outputs.has_found == 'true' }}
+        if: steps.last_issue.outputs.has_found == 'true'
         uses: peter-evans/create-issue-from-file@v4
         with:
           title: Link checker report
@@ -73,7 +73,7 @@ jobs:
             automated issue
 
       - name: Close last report open issue
-        if: ${{ steps.lychee.outputs.exit_code == 0 }}
+        if: steps.lychee.outputs.exit_code == 0
         uses: peter-evans/close-issue@v3
         with:
           issue-number: ${{ steps.last_issue.outputs.issue_number }}
