--- a/.github/workflows/release-notes-monitor.yml
+++ b/.github/workflows/release-notes-monitor.yml
@@ -47,7 +47,7 @@ jobs:
   process-prs:
     name: Processing PR
     needs: [get-list-of-prs]
-    if: ${{ needs.get-list-of-prs.outputs.matrix != '[]' && needs.get-list-of-prs.outputs.matrix != '' }}
+    if: needs.get-list-of-prs.outputs.matrix != '[]' && needs.get-list-of-prs.outputs.matrix != ''
     runs-on: self-hosted
     strategy:
       matrix:
@@ -104,7 +104,7 @@ jobs:
     name: Adding git tag to processed commit
     runs-on: self-hosted
     needs: [get-list-of-prs]
-    if: ${{ success() && needs.get-list-of-prs.outputs.existing_commit_tag == '' }}
+    if: success() && needs.get-list-of-prs.outputs.existing_commit_tag == ''
     uses: iotaledger/iota/.github/workflows/tag.yml@main
     with:
       iota_commit: ${{ needs.get-list-of-prs.outputs.new_commit_hash }}
