--- a/.github/workflows/_rust_tests.yml
+++ b/.github/workflows/_rust_tests.yml
@@ -53,6 +53,8 @@ jobs:
               fi
           done
 
+          echo $result
+
           cargo nextest run --profile ci $result
 
   check-unused-deps:
