--- a/.github/workflows/_external_rust_tests.yml
+++ b/.github/workflows/_external_rust_tests.yml
@@ -64,7 +64,7 @@ jobs:
 
           echo "$command"
 
-          eval ${command}
+          eval "${command}"
 
   check-unused-deps:
     name: Check Unused Dependencies (${{ matrix.flags }})
