--- a/.github/workflows/_rust_tests.yml
+++ b/.github/workflows/_rust_tests.yml
@@ -44,7 +44,7 @@ jobs:
           result=""
 
           for item in "${array[@]}"; do
-              mapped_item="-E rdeps(${item})"
+              mapped_item="-E 'rdeps(${item})'"
 
               if [ -z "$result" ]; then
                   result="$mapped_item"
@@ -57,7 +57,7 @@ jobs:
 
           echo "$command"
 
-          eval "${command}"
+          eval ${command}
 
   check-unused-deps:
     name: Check Unused Dependencies (${{ matrix.flags }})
