--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -31,5 +31,7 @@ jobs:
           # Generates src/version.ts file using genVersion
           # https://github.com/changesets/action#with-version-script
           version: pnpm changeset-version
+          title: TS SDK - Version Packages
+          setupGitUser: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.CHANGESETS_GITHUB_TOKEN }}
