--- a/crates/iota/Cargo.toml
+++ b/crates/iota/Cargo.toml
@@ -73,7 +73,7 @@ move-vm-profiler.workspace = true
 datatest-stable.workspace = true
 
 [dev-dependencies]
-assert_cmd.workspace = true
+assert_cmd = "2.0"
 expect-test.workspace = true
 fs_extra.workspace = true
 insta.workspace = true
