--- a/.github/workflows/_docs_lint.yml
+++ b/.github/workflows/_docs_lint.yml
@@ -3,7 +3,7 @@ name: Docs spellcheck and linting
 on: workflow_call
 
 concurrency:
-  group: docs-lint-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  group: ${{ github.workflow_ref }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
