--- a/.github/workflows/_e2e.yml
+++ b/.github/workflows/_e2e.yml
@@ -20,7 +20,7 @@ on:
         required: true
 
 concurrency:
-  group: e2e-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  group: ${{ github.workflow_ref }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
