--- a/.github/workflows/_docusaurus.yml
+++ b/.github/workflows/_docusaurus.yml
@@ -3,7 +3,7 @@ name: Docusaurus Build
 on: workflow_call
 
 concurrency:
-  group: ${{ github.workflow_ref }}-${{ github.event.pull_request.number || github.ref }}
+  group: docusaurus-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
