--- a/apps/ui-kit/package.json
+++ b/apps/ui-kit/package.json
@@ -39,7 +39,8 @@
         "classnames": "^2.5.1",
         "lodash.merge": "^4.6.2",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-number-format": "^5.2.2"
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^1.6.0",
