--- a/crates/iota-sdk/Cargo.toml
+++ b/crates/iota-sdk/Cargo.toml
@@ -42,6 +42,7 @@ tracing.workspace = true
 [dev-dependencies]
 async-recursion.workspace = true
 dirs.workspace = true
+iota-move-build.workspace = true
 rand.workspace = true
 tempfile.workspace = true
 
