Revert "try known hosts env"
This reverts commit c22454d6c5a11e7458156375b6799eac012f67e8.

--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -110,7 +110,7 @@ jobs:
       - name: Set up SSH
         uses: MrSquaare/ssh-setup-action@v3
         with:
-          host: ${{ secrets.SSH_GITHUB_KNOWN_HOSTS }}
+          host: github.com
           private-key: ${{ secrets.SSH_PRIVATE_KEY_IOTA_CI }}
           private-key-name: github-ppk
 
