--- a/docker/iota-indexer/Dockerfile
+++ b/docker/iota-indexer/Dockerfile
@@ -12,6 +12,7 @@ WORKDIR "$WORKDIR/iota"
 RUN apt update && apt install -y libpq5 ca-certificates libpq-dev postgresql
 
 # TODO: Remove when iota-sim is public
+RUN apk add --no-cache file git rsync openssh-client
 RUN mkdir -p -m 0700 ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
 RUN --mount=type=ssh <<EOT
   set -e
@@ -37,7 +38,7 @@ COPY narwhal narwhal
 COPY external-crates external-crates
 COPY docs docs
 
-RUN cargo build --profile ${PROFILE} --bin iota-indexer
+RUN --mount=type=ssh cargo build --profile ${PROFILE} --bin iota-indexer
 RUN mv target/$(if [ $PROFILE = "dev" ]; then echo "debug"; else echo "release";fi)/iota-indexer ./
 
 # Production Image
