--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -62,9 +62,17 @@ jobs:
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
           registry: ${{ secrets.DOCKER_REGISTRY_URL }}
 
+      - name: Set up SSH
+        uses: MrSquaare/ssh-setup-action@v3
+        with:
+          host: github.com
+          private-key: ${{ secrets.SSH_PRIVATE_KEY_IOTA_CI }}
+          private-key-name: github-ppk
+
       - name: Build and push Docker image for iota-node
         uses: docker/build-push-action@v5
         with:
+          ssh: default
           context: .
           file: docker/iota-node/Dockerfile
           platforms: linux/amd64
@@ -160,9 +168,17 @@ jobs:
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
           registry: ${{ secrets.DOCKER_REGISTRY_URL }}
 
+      - name: Set up SSH
+        uses: MrSquaare/ssh-setup-action@v3
+        with:
+          host: github.com
+          private-key: ${{ secrets.SSH_PRIVATE_KEY_IOTA_CI }}
+          private-key-name: github-ppk
+
       - name: Build and push Docker image for iota-tools
         uses: docker/build-push-action@v5
         with:
+          ssh: default
           context: .
           file: docker/iota-tools/Dockerfile
           platforms: linux/amd64
@@ -205,9 +221,17 @@ jobs:
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
           registry: ${{ secrets.DOCKER_REGISTRY_URL }}
 
+      - name: Set up SSH
+        uses: MrSquaare/ssh-setup-action@v3
+        with:
+          host: github.com
+          private-key: ${{ secrets.SSH_PRIVATE_KEY_IOTA_CI }}
+          private-key-name: github-ppk
+
       - name: Build and push Docker image for iota-graphql-rpc
         uses: docker/build-push-action@v5
         with:
+          ssh: default
           context: .
           file: docker/iota-graphql-rpc/Dockerfile
           platforms: linux/amd64
