--- a/.github/workflows/_e2e.yml
+++ b/.github/workflows/_e2e.yml
@@ -31,7 +31,7 @@ jobs:
     runs-on: self-hosted
     services:
       postgres:
-        image: postgres
+        image: postgres:15
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgrespw
