--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -4,7 +4,7 @@ fail-fast = false
 
 [profile.ci]
 # For CI runs only, print failure output both at the error site and at the end.
-failure-output = "immediate-final"
+failure-output = "immediate"
 # Show skipped tests in the CI output.
 status-level = "skip"
 # Retry failing tests in order to not block builds on flaky tests
@@ -15,7 +15,7 @@ slow-timeout = { period = "60s", terminate-after = 4 }
 [profile.narwhalnightly]
 # Print out output for failing tests as soon as they fail, and also at the end
 # of the run (for easy scrollability).
-failure-output = "immediate-final"
+failure-output = "immediate"
 # Show skipped tests in the CI output.
 status-level = "skip"
 # Do not retry failing tests
@@ -26,7 +26,7 @@ slow-timeout = { period = "7h", terminate-after = 1 }
 [profile.simtestnightly]
 # Print out output for failing tests as soon as they fail, and also at the end
 # of the run (for easy scrollability).
-failure-output = "immediate-final"
+failure-output = "immediate"
 # Show skipped tests in the CI output.
 status-level = "fail"
 # Mark tests as slow after 20m, terminate after 1h
