--- a/.github/workflows/_external_rust_lints.yml
+++ b/.github/workflows/_external_rust_lints.yml
@@ -17,7 +17,8 @@ concurrency:
 
 jobs:
   rustfmt:
-    if: always() && inputs.isRust
+    if: |
+      !cancelled() && inputs.isRust
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
@@ -28,7 +29,8 @@ jobs:
           cargo +nightly ci-fmt-external
 
   cargo-deny:
-    if: always() && inputs.isRust
+    if: |
+      !cancelled() && inputs.isRust
     name: cargo-deny (advisories, licenses, bans, ...)
     runs-on: [self-hosted]
     steps:
@@ -40,7 +42,8 @@ jobs:
           use-git-cli: true
 
   clippy:
-    if: always() && inputs.isRust
+    if: |
+      !cancelled() && success('rustfmt', 'cargo-deny') && inputs.isRust
     needs:
       - rustfmt
       - cargo-deny
