--- a/.github/workflows/hierarchy.yml
+++ b/.github/workflows/hierarchy.yml
@@ -54,7 +54,8 @@ jobs:
       group: license-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
       cancel-in-progress: true
     needs: diff
-    if: always() && needs.diff.outputs.isRust == 'true'
+    if: |
+      !cancelled() && needs.diff.outputs.isRust == 'true'
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
@@ -63,12 +64,14 @@ jobs:
 
   docusaurus:
     needs: diff
-    if: always() && needs.diff.outputs.isDoc == 'true' && github.event.pull_request.draft == false
+    if: |
+      !cancelled() && needs.diff.outputs.isDoc == 'true' && github.event.pull_request.draft == false
     uses: ./.github/workflows/_docusaurus.yml
 
   docs-lint:
     needs: diff
-    if: always() && needs.diff.outputs.isDoc == 'true'
+    if: |
+      !cancelled() && needs.diff.outputs.isDoc == 'true'
     uses: ./.github/workflows/_docs_lint.yml
 
   release-notes-description-check:
@@ -77,7 +80,8 @@ jobs:
       group: release-notes-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
       cancel-in-progress: true
     needs: diff
-    if: always() && needs.diff.outputs.isReleaseNotesEligible == 'true'
+    if: |
+      !cancelled() && needs.diff.outputs.isReleaseNotesEligible == 'true'
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
@@ -110,7 +114,12 @@ jobs:
       - dprint-format
       - license-check
       - typos
-    if: always() && needs.diff.outputs.isRust == 'false' && needs.diff.outputs.isMove == 'true' && github.event.pull_request.draft == false
+    if: |
+      !cancelled() &&
+      success('dprint-format', 'license-check', 'typos') &&
+      needs.diff.outputs.isRust == 'false' &&
+      needs.diff.outputs.isMove == 'true' &&
+      github.event.pull_request.draft == false
     uses: ./.github/workflows/_move_tests.yml
 
   rust:
@@ -119,7 +128,8 @@ jobs:
       - dprint-format
       - license-check
       - typos
-    if: always()
+    if: |
+      !cancelled() && success('dprint-format', 'license-check', 'typos')
     uses: ./.github/workflows/_rust.yml
     with:
       isRust: ${{ needs.diff.outputs.isRust == 'true' }}
