--- a/deny.toml
+++ b/deny.toml
@@ -44,6 +44,8 @@ yanked = "warn"
 ignore = [
   # we don't do RSA signing on Iota (only verifying for zklogin)
   "RUSTSEC-2023-0071",
+  # Cannot remove `proc-macro-error` until we can update `tabled`
+  "RUSTSEC-2024-0370",
 ]
 # Threshold for security vulnerabilities, any vulnerability with a CVSS score
 # lower than the range specified will be ignored. Note that ignored advisories
