--- a/.github/workflows/_rust_lints.yml
+++ b/.github/workflows/_rust_lints.yml
@@ -42,9 +42,10 @@ jobs:
 
   clippy:
     if: |
-      !cancelled() && success('rustfmt') && inputs.isRust
+      !cancelled() && success('rustfmt', 'cargo-deny') && inputs.isRust
     needs:
       - rustfmt
+      - cargo-deny
     runs-on: [self-hosted]
     steps:
       - uses: arduino/setup-protoc@c65c819552d16ad3c9b72d9dfd5ba5237b9c906b # pin@v3.0.0
