--- a/crates/iota-swarm-config/Cargo.toml
+++ b/crates/iota-swarm-config/Cargo.toml
@@ -1,37 +1,41 @@
 [package]
-name = "sui-swarm-config"
+name = "iota-swarm-config"
 version = "0.0.0"
-authors = ["Mysten Labs <build@mystenlabs.com>"]
+authors = ["IOTA Foundation <contact@iota.org>"]
+edition = "2021"
 license = "Apache-2.0"
 publish = false
-edition = "2021"
+
+[lints]
+workspace = true
 
 [dependencies]
 anemo.workspace = true
 anyhow.workspace = true
+bcs.workspace = true
 fastcrypto.workspace = true
+prometheus.workspace = true
 rand.workspace = true
 serde.workspace = true
 serde_with.workspace = true
 serde_yaml.workspace = true
 tempfile.workspace = true
 tracing.workspace = true
-prometheus.workspace = true
 
+iota-config.workspace = true
+iota-genesis-builder.workspace = true
+iota-macros.workspace = true
+iota-protocol-config.workspace = true
+iota-types.workspace = true
 move-bytecode-utils.workspace = true
 narwhal-config.workspace = true
 shared-crypto.workspace = true
-sui-config.workspace = true
-sui-macros.workspace = true
-sui-protocol-config.workspace = true
-sui-types.workspace = true
-sui-genesis-builder.workspace = true
 
 [target.'cfg(msim)'.dependencies]
-sui-simulator.workspace = true
+iota-simulator.workspace = true
 
 [dev-dependencies]
 insta.workspace = true
 tempfile.workspace = true
 
-sui-execution.workspace = true
+iota-execution.workspace = true
