--- a/crates/iota-sdk/Cargo.toml
+++ b/crates/iota-sdk/Cargo.toml
@@ -1,56 +1,52 @@
 [package]
-name = "sui-sdk"
+name = "iota-sdk"
 version.workspace = true
-authors = ["Mysten Labs <build@mystenlabs.com>"]
+authors = ["IOTA Foundation <contact@iota.org>"]
+edition = "2021"
 license = "Apache-2.0"
 publish = false
-edition = "2021"
 
 [dependencies]
 anyhow.workspace = true
 async-trait.workspace = true
+base64.workspace = true
+bcs.workspace = true
 clap.workspace = true
 colored.workspace = true
-jsonrpsee.workspace = true
-serde.workspace = true
-serde_with.workspace = true
-serde_json.workspace = true
-futures-core.workspace = true
 futures.workspace = true
-tokio.workspace = true
-bcs.workspace = true
-thiserror.workspace = true
+futures-core.workspace = true
+jsonrpsee.workspace = true
 reqwest.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+serde_with.workspace = true
+thiserror.workspace = true
+tokio.workspace = true
 
-sui-json-rpc-api.workspace = true
-sui-transaction-builder.workspace = true
-sui-json-rpc-types.workspace = true
-sui-types.workspace = true
-sui-json.workspace = true
-sui-keys.workspace = true
-sui-config.workspace = true
+fastcrypto.workspace = true
+iota-config.workspace = true
+iota-json.workspace = true
+iota-json-rpc-api.workspace = true
+iota-json-rpc-types.workspace = true
+iota-keys.workspace = true
+iota-transaction-builder.workspace = true
+iota-types.workspace = true
+move-core-types.workspace = true
 shared-crypto.workspace = true
 tracing.workspace = true
-move-core-types.workspace = true
-fastcrypto.workspace = true
 
 # NOTE: It's important to keep the above dependency list short.
-# This and the sui-json-rpc-api crate are widely used to develop on Sui and it's valuable
-# to not have to pull in the entire sui repo for it.
+# This and the iota-json-rpc-api crate are widely used to develop on Iota and it's valuable
+# to not have to pull in the entire iota repo for it.
 
 [dev-dependencies]
+async-recursion.workspace = true
 clap.workspace = true
 dirs.workspace = true
-async-recursion.workspace = true
-tempfile.workspace = true
-futures-core.workspace = true
 futures.workspace = true
+futures-core.workspace = true
 rand.workspace = true
-
-[[example]]
-name = "tic_tac_toe"
-path = "examples/tic_tac_toe.rs"
-test = false
+tempfile.workspace = true
 
 [[example]]
 name = "coin_read_api"
@@ -73,8 +69,8 @@ name = "programmable_transactions_api"
 path = "examples/programmable_transactions_api.rs"
 
 [[example]]
-name = "sui_client"
-path = "examples/sui_client.rs"
+name = "iota_client"
+path = "examples/iota_client.rs"
 
 [[example]]
 name = "sign_tx_guide"
