--- a/consensus/config/Cargo.toml
+++ b/consensus/config/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
 name = "consensus-config"
 version = "0.1.0"
-license = "Apache-2.0"
-authors = ["Mysten Labs <build@mystenlabs.com>"]
+authors = ["IOTA Foundation <contact@iota.org>"]
 edition = "2021"
+license = "Apache-2.0"
 publish = false
+
+[lints]
+workspace = true
 
 [dependencies]
 fastcrypto.workspace = true
-mysten-network.workspace = true
+iota-network-stack.workspace = true
 rand.workspace = true
 serde.workspace = true
 shared-crypto.workspace = true
