--- a/consensus/core/Cargo.toml
+++ b/consensus/core/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
 name = "consensus-core"
 version = "0.1.0"
-license = "Apache-2.0"
-authors = ["Mysten Labs <build@mystenlabs.com>"]
+authors = ["IOTA Foundation <contact@iota.org>"]
 edition = "2021"
+license = "Apache-2.0"
 publish = false
+
+[lints]
+workspace = true
 
 [dependencies]
 anemo.workspace = true
@@ -21,29 +24,44 @@ dashmap.workspace = true
 enum_dispatch.workspace = true
 fastcrypto.workspace = true
 futures.workspace = true
-quinn-proto.workspace = true
+http.workspace = true
+hyper.workspace = true
+hyper-rustls.workspace = true
+hyper-util.workspace = true
+iota-common.workspace = true
+iota-macros.workspace = true
+iota-metrics.workspace = true
+iota-network-stack.workspace = true
+iota-protocol-config.workspace = true
+iota-tls.workspace = true
+itertools.workspace = true
 mockall.workspace = true
-mysten-metrics.workspace = true
-mysten-network.workspace = true
+nom = "7.1.3"
 parking_lot.workspace = true
 prometheus.workspace = true
 prost.workspace = true
+quinn-proto.workspace = true
 rand.workspace = true
+rustls.workspace = true
 serde.workspace = true
 shared-crypto.workspace = true
-sui-protocol-config.workspace = true
+strum_macros.workspace = true
 tap.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
+tokio-rustls.workspace = true
+tokio-stream.workspace = true
+tokio-util.workspace = true
 tonic.workspace = true
 tower.workspace = true
+tower-http.workspace = true
 tracing.workspace = true
 typed-store.workspace = true
 
 [dev-dependencies]
 rstest.workspace = true
-tempfile.workspace = true
 telemetry-subscribers.workspace = true
+tempfile.workspace = true
 
 [build-dependencies]
 anemo-build.workspace = true
