--- a/crates/typed-store-error/Cargo.toml
+++ b/crates/typed-store-error/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
 name = "typed-store-error"
 version = "0.4.0"
-license = "Apache-2.0"
-authors = ["Ade A. <ade@mystenlabs.com>"]
-description = "error types for typed-store crate"
+authors = ["Ade A. <ade@iota.org>"]
 edition = "2021"
+license = "Apache-2.0"
 publish = false
+description = "error types for typed-store crate"
 
 [dependencies]
 serde.workspace = true
 thiserror.workspace = true
-
