--- a/crates/iota-proc-macros/Cargo.toml
+++ b/crates/iota-proc-macros/Cargo.toml
@@ -1,19 +1,22 @@
 [package]
-name = "sui-proc-macros"
+name = "iota-proc-macros"
 version = "0.7.0"
-authors = ["Mysten Labs <build@mystenlabs.com>"]
+authors = ["IOTA Foundation <contact@iota.org>"]
+edition = "2021"
 license = "Apache-2.0"
 publish = false
-edition = "2021"
+
+[lints]
+workspace = true
 
 [lib]
 proc-macro = true
 
 [dependencies]
+iota-enum-compat-util.workspace = true
+proc-macro2.workspace = true
 quote.workspace = true
 syn = { version = "2", features = ["full", "fold", "extra-traits"] }
-proc-macro2.workspace = true
-sui-enum-compat-util.workspace = true
 
 [target.'cfg(msim)'.dependencies]
 msim-macros.workspace = true
