chore(CI): Move `cargo-deny` job up in hierarchy

--- a/.github/workflows/_rust.yml
+++ b/.github/workflows/_rust.yml
@@ -1,4 +1,4 @@
-name: Rust crates
+name: Rust
 
 on:
   workflow_call:
@@ -6,9 +6,7 @@ on:
       isRust:
         type: boolean
     secrets:
-      SSH_PRIVATE_KEY_IOTA_CI:
-        required: true
-      SSH_GITHUB_KNOWN_HOSTS:
+      GITHUB_TOKEN:
         required: true
 
 env:
@@ -45,7 +43,6 @@ jobs:
     uses: ./.github/workflows/_external_rust_lints.yml
     with:
       isRust: ${{ inputs.isRust }}
-    secrets: inherit
 
   rust-tests:
     if: github.event.pull_request.draft == false
