--- a/.github/workflows/_external_rust_lints.yml
+++ b/.github/workflows/_external_rust_lints.yml
@@ -1,15 +1,10 @@
-name: Rust lints
+name: External rust lints
 
 on:
   workflow_call:
     inputs:
       isRust:
         type: boolean
-    secrets:
-      SSH_PRIVATE_KEY_IOTA_CI:
-        required: true
-      SSH_GITHUB_KNOWN_HOSTS:
-        required: true
 
 concurrency:
   group: ext-rust-lints-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -34,25 +29,11 @@ jobs:
         run: |
           cargo +nightly ci-fmt-external
 
-  cargo-deny:
-    if: |
-      !cancelled() && inputs.isRust
-    name: cargo-deny (advisories, licenses, bans, ...)
-    runs-on: [self-hosted]
-    steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
-      - uses: EmbarkStudios/cargo-deny-action@v2
-        with:
-          ssh-key: ${{ secrets.SSH_PRIVATE_KEY_IOTA_CI }}
-          ssh-known-hosts: ${{ secrets.SSH_GITHUB_KNOWN_HOSTS }}
-          use-git-cli: true
-
   clippy:
     if: |
-      !cancelled() && success('rustfmt', 'cargo-deny') && inputs.isRust
+      !cancelled() && success('rustfmt') && inputs.isRust
     needs:
       - rustfmt
-      - cargo-deny
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
