--- a/.github/workflows/_rust_lints.yml
+++ b/.github/workflows/_rust_lints.yml
@@ -6,9 +6,7 @@ on:
       isRust:
         type: boolean
     secrets:
-      SSH_PRIVATE_KEY_IOTA_CI:
-        required: true
-      SSH_GITHUB_KNOWN_HOSTS:
+      GITHUB_TOKEN:
         required: true
 
 concurrency:
@@ -33,25 +31,11 @@ jobs:
       - name: Check Rust formatting
         run: cargo +nightly ci-fmt
 
-  cargo-deny:
-    if: |
-      !cancelled() && inputs.isRust
-    name: cargo-deny (advisories, licenses, bans, ...)
-    runs-on: [self-hosted]
-    steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
-      - uses: EmbarkStudios/cargo-deny-action@v2
-        with:
-          ssh-key: ${{ secrets.SSH_PRIVATE_KEY_IOTA_CI }}
-          ssh-known-hosts: ${{ secrets.SSH_GITHUB_KNOWN_HOSTS }}
-          use-git-cli: true
-
   clippy:
     if: |
-      !cancelled() && success('rustfmt', 'cargo-deny') && inputs.isRust
+      !cancelled() && success('rustfmt') && inputs.isRust
     needs:
       - rustfmt
-      - cargo-deny
     runs-on: [self-hosted]
     steps:
       - uses: arduino/setup-protoc@c65c819552d16ad3c9b72d9dfd5ba5237b9c906b # pin@v3.0.0
