--- a/.github/workflows/_external_rust_lints.yml
+++ b/.github/workflows/_external_rust_lints.yml
@@ -1,10 +1,6 @@
 name: External rust lints
 
-on:
-  workflow_call:
-    inputs:
-      isRust:
-        type: boolean
+on: workflow_call
 
 concurrency:
   group: ext-rust-lints-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -19,7 +15,7 @@ env:
 jobs:
   rustfmt:
     if: |
-      !cancelled() && inputs.isRust
+      !cancelled()
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
@@ -31,7 +27,7 @@ jobs:
 
   clippy:
     if: |
-      !cancelled() && success('rustfmt') && inputs.isRust
+      !cancelled() && success('rustfmt')
     needs:
       - rustfmt
     runs-on: [self-hosted]
