--- a/.github/workflows/_external_rust_tests.yml
+++ b/.github/workflows/_external_rust_tests.yml
@@ -1,10 +1,6 @@
 name: Rust tests
 
-on:
-  workflow_call:
-    inputs:
-      isRust:
-        type: boolean
+on: workflow_call
 
 concurrency:
   group: ext-rust-tests-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -17,7 +13,6 @@ env:
 
 jobs:
   changes:
-    if: inputs.isRust
     runs-on: [self-hosted]
     outputs:
       components: ${{ steps.filter.outputs.changes }}
@@ -33,7 +28,7 @@ jobs:
     name: Test external crates
     needs: changes
     if: |
-      !cancelled() && inputs.isRust
+      !cancelled()
     env:
       # Tests written with #[sim_test] are often flaky if run as #[tokio::test] - this var
       # causes #[sim_test] to only run under the deterministic `simtest` job, and not the
@@ -75,7 +70,7 @@ jobs:
   check-unused-deps:
     name: Check Unused Dependencies (${{ matrix.flags }})
     if: |
-      !cancelled() && inputs.isRust
+      !cancelled()
     strategy:
       matrix:
         flags: ["--all-features", "--no-default-features"]
