Added missing anemo depencies to Cargo.toml based on v1.32.2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -569,6 +569,12 @@ passkey-authenticator = { version = "0.2.0" }
 passkey-client = { version = "0.2.0" }
 passkey-types = { version = "0.2.0" }
 
+# anemo dependencies
+anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "dbb5a074c2d25660525ab5d36d65ff0cb8051949" }
+anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "dbb5a074c2d25660525ab5d36d65ff0cb8051949" }
+anemo-cli = { git = "https://github.com/mystenlabs/anemo.git", rev = "dbb5a074c2d25660525ab5d36d65ff0cb8051949" }
+anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "dbb5a074c2d25660525ab5d36d65ff0cb8051949" }
+
 # core-types with json format for REST api
 iota-sdk2 = { package = "sui-sdk", git = "https://github.com/mystenlabs/sui-rust-sdk.git", rev = "bd233b6879b917fb95e17f21927c198e7a60c924", features = [
   "hash",
