--- a/.github/actions/diffs/action.yml
+++ b/.github/actions/diffs/action.yml
@@ -17,7 +17,7 @@ outputs:
 runs:
   using: composite
   steps:
-    - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+    - uses: actions/checkout@v4
     - name: Detect Changes
       uses: dorny/paths-filter@v3
       id: diff
