--- a/.github/workflows/_docs_lint.yml
+++ b/.github/workflows/_docs_lint.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: [self-hosted]
 
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+      - uses: actions/checkout@v4
       - name: Spell Check Docs
-        uses: crate-ci/typos@v1.16.11
+        uses: crate-ci/typos@v1.24.5
         with:
           files: ./docs/content
