--- a/.github/workflows/_external_rust_tests.yml
+++ b/.github/workflows/_external_rust_tests.yml
@@ -22,7 +22,7 @@ jobs:
     outputs:
       components: ${{ steps.filter.outputs.changes }}
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
+      - uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3
         id: filter
         with:
@@ -41,8 +41,10 @@ jobs:
       IOTA_SKIP_SIMTESTS: 1
     runs-on: [self-hosted]
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
-      - uses: taiki-e/install-action@nextest
+      - uses: actions/checkout@v4
+      - uses: taiki-e/install-action@v2
+        with:
+          tool: nextest
       - name: Install python dependencies
         run: pip install pyopenssl --upgrade --break-system-packages
       - name: cargo test
@@ -83,6 +85,6 @@ jobs:
     runs-on: [self-hosted]
 
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+      - uses: actions/checkout@v4
       - name: Run Cargo Udeps
         run: cargo +nightly ci-udeps-external ${{ matrix.flags }}
