--- a/.github/workflows/_typos.yml
+++ b/.github/workflows/_typos.yml
@@ -15,6 +15,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check spelling
-        uses: crate-ci/typos@master
+        uses: crate-ci/typos@v1.24.5
         with:
           config: ./.typos.toml
