--- a/.github/workflows/apps-wallet-nightly.build.yml
+++ b/.github/workflows/apps-wallet-nightly.build.yml
@@ -32,12 +32,12 @@ jobs:
           export artifact_name="wallet-nightly-$(date -Idate)"
           echo "artifact_name=${artifact_name}" >> $GITHUB_ENV
       - name: Checking out ${{ env.iota_branch }}
-        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # pin@v3
+        uses: actions/checkout@v4
         with:
           ref: ${{ env.iota_branch }}
-      - uses: pnpm/action-setup@fe02b34f77f8bc703788d5817da081398fad5dd2 # pin@v4.0.0
+      - uses: pnpm/action-setup@v4
       - name: Install Nodejs
-        uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # pin@v4.0.2
+        uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: "pnpm"
@@ -45,7 +45,7 @@ jobs:
         run: pnpm install --frozen-lockfile
       - name: Turbo Cache
         id: turbo-cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: node_modules/.cache/turbo
           key: turbo-${{ runner.os }}-${{ github.sha }}
