--- a/.github/workflows/build-nightly.yml
+++ b/.github/workflows/build-nightly.yml
@@ -69,7 +69,7 @@ jobs:
           echo "os_type=${system_os}-${arch}" >> $GITHUB_ENV
 
       - name: Checking out ${{ env.iota_branch }}
-        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # pin@v3
+        uses: actions/checkout@v4
         with:
           ref: ${{ env.iota_branch }}
 
