--- a/.github/workflows/changesets-ci-comment.yml
+++ b/.github/workflows/changesets-ci-comment.yml
@@ -16,14 +16,14 @@ jobs:
       github.event.workflow_run.conclusion == 'success'
     steps:
       - name: Get workflow run information
-        uses: potiuk/get-workflow-origin@e3ba776faee1134e17551924b852bfb374e1703d # pin@v1_1
+        uses: potiuk/get-workflow-origin@v1
         id: source-run-info
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           sourceRunId: ${{ github.event.workflow_run.id }}
 
       - name: "Download artifact"
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # pin@v7.0.1
+        uses: actions/github-script@v7
         id: get-artifact
         if: steps.source-run-info.outputs.pullRequestNumber
         with:
@@ -58,7 +58,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Remove outdated comments
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # pin@v7.0.1
+        uses: actions/github-script@v7
         if: steps.get-artifact.outputs.result == 'false' && steps.source-run-info.outputs.pullRequestNumber
         env:
           ISSUE_NUMBER: ${{ steps.source-run-info.outputs.pullRequestNumber }}
