--- a/.github/workflows/hierarchy.yml
+++ b/.github/workflows/hierarchy.yml
@@ -27,7 +27,7 @@ jobs:
       isTypescriptSDK: ${{ (steps.turbo.outputs.packages && contains(fromJson(steps.turbo.outputs.packages), '@iota/iota-sdk')) }}
       isGraphQlTransport: ${{ (steps.turbo.outputs.packages && contains(fromJson(steps.turbo.outputs.packages), '@iota/graphql-transport')) }}
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+      - uses: actions/checkout@v4
       - name: Detect Changes (turbo)
         uses: "./.github/actions/turbo-diffs"
         id: turbo
@@ -41,7 +41,7 @@ jobs:
       group: dprint-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
       cancel-in-progress: true
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+      - uses: actions/checkout@v4
       - name: Check dprint formatting
         run: dprint check
 
@@ -58,7 +58,7 @@ jobs:
       !cancelled() && needs.diff.outputs.isRust == 'true'
     runs-on: [self-hosted]
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+      - uses: actions/checkout@v4
       - name: Run license check
         run: cargo ci-license
 
@@ -84,7 +84,7 @@ jobs:
       !cancelled() && needs.diff.outputs.isReleaseNotesEligible == 'true'
     runs-on: [self-hosted]
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+      - uses: actions/checkout@v4
       - name: Check Pull Request Description
         shell: bash
         run: |
