--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -10,6 +10,6 @@ jobs:
       pull-requests: write
     runs-on: self-hosted
     steps:
-      - uses: actions/labeler@9fd24f1f9d6ceb64ba34d181b329ee72f99978a0
+      - uses: actions/labeler@v5
         with:
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
