--- a/.github/workflows/release-notes-monitor.yml
+++ b/.github/workflows/release-notes-monitor.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - name: Checkout iota repo develop branch
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
           ref: develop
@@ -63,7 +63,7 @@ jobs:
           echo "release_notes=${rel_notes}" >> $GITHUB_ENV
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # pin v4.0.2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
