--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,11 +40,11 @@ jobs:
     strategy:
       matrix:
         os: [
-          windows-ghcloud, # windows-x86_64
-          self-hosted, # ubuntu-x86_64
-          macos-latest-xl, # macos-x86_64
-          macos-arm64-self-hosted, # macos-arm64
-        ]
+            windows-ghcloud, # windows-x86_64
+            self-hosted, # ubuntu-x86_64
+            macos-latest-xl, # macos-x86_64
+            macos-arm64-self-hosted, # macos-arm64
+          ]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
@@ -59,7 +59,7 @@ jobs:
 
       - name: Configure AWS credentials
         if: env.TAG_NAME != 'main'
-        uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # pin v4.0.2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -123,7 +123,7 @@ jobs:
 
       - name: Checking out ${{ env.iota_tag }}
         if: env.s3_archive_exist == ''
-        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # pin@v3
+        uses: actions/checkout@v4
         with:
           ref: ${{ env.iota_tag }}
 
@@ -186,7 +186,7 @@ jobs:
           choco push iota.${{ env.iota_version }}.nupkg --source https://push.chocolatey.org/
 
       - name: Upload release artifacts for ${{ matrix.os }} platform
-        uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # pin@v3
+        uses: actions/upload-artifact@v4
         with:
           name: iota-binaries-${{ matrix.os }}
           if-no-files-found: error
@@ -240,7 +240,7 @@ jobs:
 
       # Checkout iotaledger/homebrew-tap
       - name: Checkout Target Repository
-        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # pin@v3
+        uses: actions/checkout@v4
         with:
           repository: iotaledger/homebrew-tap
           # @john's PAT, needs to be rotated jan 5 2025
@@ -250,7 +250,7 @@ jobs:
 
       # Download all artifacts from the previous job
       - name: Download all artifacts
-        uses: actions/download-artifact@cbed621e49e4c01b044d60f6c80ea4ed6328b281 # pin@v2
+        uses: actions/download-artifact@v4
 
       - name: Fetch Ubuntu x86_64 Binary and Compute SHA256
         shell: bash
