--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -36,7 +36,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # Pin v4.1.1
+        uses: actions/checkout@v4
 
       - name: Tag
         uses: julbme/gh-action-manage-tag@v1
